--- a/index.html
+++ b/index.html
@@ -120,5 +120,9 @@ function mostrar() {
 mostrar();
 </script>
 
-</body>
+body {
+  background: url("foto 1.jpg")
+  no-repeat center center fixed;
+  background-size: cover;
+}
 </html>
