--- a/index.html
+++ b/index.html
@@ -120,9 +120,6 @@ function mostrar() {
 mostrar();
 </script>
 
-body {
-  background: url("foto 1.jpg")
-  no-repeat center center fixed;
-  background-size: cover;
-}
+<body>
+  
 </html>
