--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Barbearia Black</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body {
+    body { 
       margin: 0;
       font-family: Tahoma, Arial, sans-serif;
       background: #000;
@@ -60,7 +60,11 @@
     }
   </style>
 </head>
-<body>
+<body> 
+  body {
+  background: url("foto 1.jpg") no-repeat center center fixed;
+  background-size: cover;
+}
 
 <header>
   <h1>Barbearia Black</h1>
