--- a/index.html
+++ b/index.html
@@ -3,127 +3,52 @@
 <head>
   <meta charset="UTF-8">
   <title>Barbearia Black</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <style>
-    body { 
+    body {
       margin: 0;
-      font-family: Tahoma, Arial, sans-serif;
-      background: #000;
-      color: #fff;
+      font-family: Arial, Helvetica, sans-serif;
+      color: white;
+
+      /* FUNDO COM FOTO */
+      background-image: linear-gradient(
+        rgba(0,0,0,0.6),
+        rgba(0,0,0,0.6)
+      ),
+      url("foto .jpg"); /* TROQUE SE PRECISAR */
+
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
     }
-    header {
-      background: #000;
-      padding: 20px;
-      text-align: center;
-      border-bottom: 3px solid gold;
-    }
-    h1 {
-      margin: 0;
-      color: gold;
-      letter-spacing: 2px;
-    }
+
     .container {
-      padding: 20px;
-    }
-    .status {
-      border: 2px solid gold;
-      padding: 20px;
       text-align: center;
-      margin-bottom: 20px;
-    }
-    .badge {
-      display: inline-block;
-      padding: 10px 20px;
-      font-weight: bold;
-      margin-top: 10px;
-    }
-    .livre { background: green; }
-    .atendendo { background: red; }
-    .finalizando { background: orange; color: #000; }
-
-    button {
-      margin: 5px;
-      padding: 10px;
-      font-weight: bold;
-      background: gold;
-      border: none;
+      padding: 40px 20px;
     }
 
-    a {
-      display: inline-block;
-      margin-top: 20px;
-      background: #25d366;
-      color: #000;
+    h1 {
+      font-size: 42px;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 18px;
+      margin: 10px 0;
+    }
+
+    .status {
+      margin: 30px auto;
       padding: 15px;
-      text-decoration: none;
-      font-weight: bold;
+      width: 260px;
+      background: black;
+      border: 2px solid gold;
+      font-size: 20px;
     }
-  </style>
-</head>
-<body> 
-  body {
-  background: url("foto 1.jpg") no-repeat center center fixed;
-  background-size: cover;
-}
 
-<header>
-  <h1>Barbearia Black</h1>
-  <p>Estilo anos 2000 • Corte na régua</p>
-</header>
-
-<div class="container">
-  <div class="status">
-    <h2>Status agora</h2>
-    <div id="badge" class="badge livre">LIVRE – pode vir</div>
-    <p id="texto">Não estamos atendendo ninguém.</p>
-  </div>
-
-  <p><b>Endereço:</b><br>
-  João Pessoa – Alto do Mateus<br>
-  Rua Carteiro José Noberto, nº 75</p>
-
-  <a href="https://wa.me/5583998792009" target="_blank">
-    Chamar no WhatsApp
-  </a>
-
-  <hr>
-
-  <h3>Área do barbeiro</h3>
-  <button onclick="mudar('livre')">Livre</button>
-  <button onclick="mudar('atendendo')">Atendendo</button>
-  <button onclick="mudar('finalizando')">Finalizando</button>
-</div>
-
-<script>
-function mudar(status) {
-  localStorage.setItem('statusBB', status);
-  mostrar();
-}
-
-function mostrar() {
-  let status = localStorage.getItem('statusBB') || 'livre';
-  let badge = document.getElementById('badge');
-  let texto = document.getElementById('texto');
-
-  badge.className = 'badge ' + status;
-
-  if (status === 'livre') {
-    badge.innerText = 'LIVRE – pode vir';
-    texto.innerText = 'Não estamos atendendo ninguém.';
-  }
-  if (status === 'atendendo') {
-    badge.innerText = 'ATENDENDO';
-    texto.innerText = 'Estamos atendendo um cliente.';
-  }
-  if (status === 'finalizando') {
-    badge.innerText = 'FINALIZANDO';
-    texto.innerText = 'Atendimento quase finalizado.';
-  }
-}
-
-mostrar();
-</script>
-
-<body>
-  
-</html>
+    .btn {
+      display: inline-block;
+      margin-top: 25px;
+      padding: 15px 25px;
+      background: green;
+      color: white;
