--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         rgba(0,0,0,0.6),
         rgba(0,0,0,0.6)
       ),
-      url("foto .jpg"); /* TROQUE SE PRECISAR */
+      url("foto.webp.jpg"); /* TROQUE SE PRECISAR */
 
       background-size: cover;
       background-position: center;
