--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+BARBEARIA BLACK 💈
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -5,22 +6,24 @@
   <title>Barbearia Black</title>
 
   <style>
+    /* ===== AQUI É O FUNDO COM FOTO ===== */
     body {
       margin: 0;
       font-family: Arial, Helvetica, sans-serif;
       color: white;
 
-      /* FUNDO COM FOTO */
+      /* 🔴 TROQUE O NOME DA FOTO AQUI 🔴 */
       background-image: linear-gradient(
         rgba(0,0,0,0.6),
         rgba(0,0,0,0.6)
       ),
-      url("foto.webp"); /* TROQUE SE PRECISAR */
+      url("SUA_FOTO_AQUI.jpg");
 
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
     }
+    /* ===== FIM DO FUNDO ===== */
 
     .container {
       text-align: center;
@@ -48,7 +51,4 @@
 
     .btn {
       display: inline-block;
-      margin-top: 25px;
-      padding: 15px 25px;
-      background: green;
-      color: white;
+      margin-top:
