--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ BARBEARIA BLACK 💈
         rgba(0,0,0,0.6),
         rgba(0,0,0,0.6)
       ),
-      url("SUA_FOTO_AQUI.jpg");
+      url("foto.webp.jpg");
 
       background-size: cover;
       background-position: center;
