--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-BARBEARIA BLACK 💈
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -6,24 +5,12 @@ BARBEARIA BLACK 💈
   <title>Barbearia Black</title>
 
   <style>
-   
     body {
       margin: 0;
       font-family: Arial, Helvetica, sans-serif;
       color: white;
-
-    
-      background-image: linear-gradient(
-        rgba(0,0,0,0.6),
-        rgba(0,0,0,0.6)
-      ),
-      url("foto.webp.jpg");
-
-      background-size: cover;
-      background-position: center;
-      background-attachment: fixed;
+      background-color: black;
     }
-
 
     .container {
       text-align: center;
@@ -32,23 +19,29 @@ BARBEARIA BLACK 💈
 
     h1 {
       font-size: 42px;
-      margin-bottom: 10px;
-    }
-
-    p {
-      font-size: 18px;
-      margin: 10px 0;
-    }
-
-    .status {
-      margin: 30px auto;
-      padding: 15px;
-      width: 260px;
-      background: black;
-      border: 2px solid gold;
-      font-size: 20px;
     }
 
     .btn {
       display: inline-block;
-      margin-top:
+      margin-top: 25px;
+      padding: 15px 25px;
+      background: green;
+      color: white;
+      text-decoration: none;
+      font-size: 18px;
+      border-radius: 8px;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="container">
+    <h1>💈 Barbearia Black</h1>
+    <p>João Pessoa - Alto do Mateus</p>
+
+    <a class="btn" href="https://wa.me/5583998792009" target="_blank">
+      💬 Chamar no WhatsApp
+    </a>
+  </div>
+</body>
+</html>
