--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         rgba(0,0,0,0.6),
         rgba(0,0,0,0.6)
       ),
-      url("SUA_FOTO_AQUI.jpg");
+      url(".jpg");
 
       background-size: cover;
       background-position: center;
