--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         rgba(0,0,0,0.6),
         rgba(0,0,0,0.6)
       ),
-      url(".jpg");
+      url("https://www.instagram.com/p/DRIz_sADFCa/?img_index=1.jpg");
 
       background-size: cover;
       background-position: center;
