--- a/index.html
+++ b/index.html
@@ -8,18 +8,8 @@
     body {
       margin: 0;
       font-family: Arial, Helvetica, sans-serif;
+      background-color: black;
       color: white;
-
-     
-      background-image: linear-gradient(
-        rgba(0,0,0,0.6),
-        rgba(0,0,0,0.6)
-      ),
-      url("https://www.instagram.com/p/DRIz_sADFCa/?img_index=1.jpg");
-
-      background-size: cover;
-      background-position: center;
-      background-attachment: fixed;
     }
 
     .container {
@@ -29,14 +19,14 @@
 
     h1 {
       font-size: 40px;
-      margin-bottom: 10px;
+      margin-bottom: 15px;
     }
 
     .status {
       margin: 20px auto;
       padding: 15px;
       width: 260px;
-      background: black;
+      background: #111;
       border: 2px solid gold;
       font-size: 20px;
       border-radius: 8px;
@@ -50,4 +40,20 @@
     .btn {
       display: inline-block;
       margin-top: 25px;
-      padding: 15px 25
+      padding: 15px 25px;
+      background: green;
+      color: white;
+      text-decoration: none;
+      font-size: 18px;
+      border-radius: 8px;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="container">
+    <h1>💈 Barbearia Black</h1>
+
+    <div class="status">
+      🔴 Status: Aten
+      
