--- a/index.html
+++ b/index.html
@@ -3,52 +3,46 @@
 <head>
   <meta charset="UTF-8">
   <title>Barbearia Black</title>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      color: white;
-
-      /* FUNDO COM FOTO */
-      background-image: linear-gradient(
-        rgba(0,0,0,0.6),
-        rgba(0,0,0,0.6)
-      ),
-      url("foto1.jpg"); /* TROQUE SE PRECISAR */
-
-      background-size: cover;
-      background-position: center;
-      background-attachment: fixed;
+      font-family: Tahoma, Arial, sans-serif;
+      background: #000;
+      color: #fff;
     }
-
-    .container {
+    header {
+      background: #000;
+      padding: 20px;
       text-align: center;
-      padding: 40px 20px;
+      border-bottom: 3px solid gold;
     }
-
     h1 {
-      font-size: 42px;
-      margin-bottom: 10px;
+      margin: 0;
+      color: gold;
+      letter-spacing: 2px;
     }
-
-    p {
-      font-size: 18px;
-      margin: 10px 0;
+    .container {
+      padding: 20px;
     }
-
     .status {
-      margin: 30px auto;
-      padding: 15px;
-      width: 260px;
-      background: black;
       border: 2px solid gold;
-      font-size: 20px;
+      padding: 20px;
+      text-align: center;
+      margin-bottom: 20px;
     }
-
-    .btn {
+    .badge {
       display: inline-block;
-      margin-top: 25px;
-      padding: 15px 25px;
-      background: green;
-      color: white;
+      padding: 10px 20px;
+      font-weight: bold;
+      margin-top: 10px;
+    }
+    .livre { background: green; }
+    .atendendo { background: red; }
+    .finalizando { background: orange; color: #000; }
+
+    button {
+      margin: 5px;
+      padding: 10px;
+      font-weight:
+      
